--- a/tasks/task day4 cont/t4.formating and interactive.html
+++ b/tasks/task day4 cont/t4.formating and interactive.html
@@ -20,25 +20,25 @@
 
     <mark>Tech on:</mark>
 
-    <input type="checkbox" name="cc" value="html">
+    <input type="checkbox" id = "html" name="cc" value="html">
     <label for="html" >HTML</label>
 
-    <input type="checkbox" name="cc" value="java">
+    <input type="checkbox" id="java" name="cc" value="java">
     <label for="java">CSS</label>
 
-    <input type="checkbox" name="cc" value="python">
-    <label for="python">JavaScript</label>
+    <input type="checkbox" id="Js" name="cc" value="python">
+    <label for="Js">JavaScript</label>
 
-    <input type="checkbox" name="cc" value="dot-net">
-    <label for="dot-net">React</label><br><br>
+    <input type="checkbox" id="React" name="cc" value="dot-net">
+    <label for="React">React</label><br><br>
 
     <mark>Ratings:</mark>
 
-    <input type="radio" name="rate" value="1"> *  
-    <input type="radio" name="rate" value="2"> ** 
-    <input type="radio" name="rate" value="3"> *** 
-    <input type="radio" name="rate" value="4"> ****  
-    <input type="radio" name="rate" value="5"> *****<br><br>
+    <input type="radio" name="rate" value="1"> 1
+    <input type="radio" name="rate" value="2"> 2 
+    <input type="radio" name="rate" value="3"> 3
+    <input type="radio" name="rate" value="4"> 4  
+    <input type="radio" name="rate" value="5"> 5<br><br>
 
     <mark>Comments:</mark>
     <textarea></textarea><br><br>
