--- a/tasks/task day4 cont/t4.interactive tags.html
+++ b/tasks/task day4 cont/t4.interactive tags.html
@@ -21,21 +21,21 @@
         <input type="email" id="email"><br><br>
 
         <label for="contact">Contact:</label>
-        <input type="tel" pattern="[0-9]{10}" maxlength="10"><br><br>
+        <input type="tel" pattern="[0-9]{10}" maxlength="10" id="contact"><br><br>
 
         <label>Role Applied</label>
 
-        <input type="radio"  name="skills" value="Mern">
+        <input type="radio" name="skills" value="Mern">
         <label for="Mern">Mern</label>
 
-        <input type="radio"  name="skills" value="Java">Java
+        <input type="radio" id="Java" name="skills" value="Java">Java
         <label for="Java" ></label>
 
-        <input type="radio"  name="skills" value="Python">Python
+        <input type="radio" id="Python" name="skills" value="Python">Python
         <label for="Python" ></label>
 
-        <input type="radio" name="skills" value="Dot net">Dot net
-        <label for="Dot net" ></label>
+        <input type="radio" id="Dotnet" name="skills" value="Dot net">Dot net
+        <label for="Dotnet" ></label>
         <br><br>
 
         <label>Resume:</label>
